# fashion-attribute-recognition

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.example.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
audit/: audit_accuracy.csv
data_manifests/: manifest.json
docs/: deployment.md  model-card.md
orthogonality/: cramers_v_comparison (1).csv  orthogonality_sample_20 (1).csv
research/: fashion_attributes.ipynb
research/audit/: audit (1).csv
research/data_manifests/: class_distribution (1).csv  train_final.csv  val_final.csv
research/results/: test_results_dinov2 (1).csv  test_results_resnet50 (1).csv
results/: test_predictions_dinov2.csv  test_predictions_resnet50.csv
src/fashion_api/: __init__.py
src/fashion_api/api/: __init__.py  app.py  errors.py  middleware.py  schemas.py  validation.py
src/fashion_api/core/: __init__.py  artifacts.py  logging.py  settings.py
src/fashion_api/ml/: __init__.py  labels.py  model.py
src/inference/api/: __init__.py  main.py  model.py  schemas.py  settings.py  validation.py
src/models/: fashion_multihead.py
tests/: test_api.py
